.gitignore is now working
