# dist/api.yml
@@ -1,246 +1,366 @@
 openapi: 3.0.0
 info:
-  title: api
-  description: API for  project
-  version: 1.0.0
-tags:
-  - name: Users
-  - name: Auth
-  - name: League
-  - name: Players
-  - name: Teams
-  - name: Games
+  description: Assignment 3.1 API
+  version: "1.0.0"
+  title: Assignment 3.1 API
+  contact:
+    email: avichaie@post.bgu.ac.il #can't add more emails?
+tags: #???
+  - name: admins
+    description: Secured Admin-only calls
+  - name: developers
+    description: Operations available to regular developers
 paths:
-  /Register:
+  /register:  
     post:
-      tags:
-        - Auth
-      summary: Add new user
-      description: A new user from the client is added to the server
+      tags: 
+        - users
+      summary: register 
+      description: register new user to system
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: '#/components/schemas/new_user'
       responses:
-        "201":
-          description: A new user has been added
+        '201':
+          description: "user successfully added"
+        '400':
+          description: "user could not be added"
+  /login:  
+    post:
+      tags: 
+        - users
+      summary: user log in
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Login'
+      responses:
+        "200":
+          description: "user successful login"
         "400":
-          description: wrong input parameters
-  /Login:
-    post:
-      tags:
-        - Auth
-      summary: Login an exist user
-      description: An exist user login to the system
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/LoginScheme"
-      responses:
-        "200":
-          description: >
-            User was found in the DB and authenitcated successfully.
-            The session ID is returned in a cookie named `session`. 
-            You should include this cookie in subsequent requests
-          # headers:
-          #   Set-Cookie:
-          #     schema:
-          #       type: string
-          #       example: session=87s97sdhgf279293f8w0e9
-            # Note that the Set-Cookie header and securitySchemes are not connected in any way, and the Set-Header definition is for documentation purposes only.
-        "401":
-          description: Authentication failed
-  /logout:
-    post:
-      tags:
-        - Auth
-      summary: logout a user from the system and delete his cookie
-      responses:
-        "200":
-          description: "the user has ben successfully logged out"
-  /league/getDetails:
+          description: "Invalid username/password"
+  /users/{user_id}/favorites/{object_type}:
     get:
-      tags:
+      tags: 
+        - users
+        - favorites
+      summary: get_favorites 
+      description: fetch all matchs / teams / players for user
+      parameters: 
+      - in: "path"
+        name: user_id
+        required: true
+        schema:
+          type: integer
+      - in: "path"
+        name: object_type
+        required: true
+        schema:
+          type: string #verified at client-side
+      responses:
+        "200":
+          description: "returned favorites"
+        "400":
+          description: "Invalid user ID  or object type supplied"
+  /league/details:
+    get:
+      tags: 
         - league
-      summary: Return the details about the current league
+      summary: get_league_details 
+      description: fetch "cycle" and next match in Super Liga.
       responses:
         "200":
-          description: data about the current league returned
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/League"
-        "400":
-          description: wrong input parameters
-  /users/favoritePlayers:
-    get:
-      tags:
-        - Users
-        - Players
-      summary: Return the favorite players that were saved by user
-      parameters:
-      responses:
-        "200":
-          description: data about the user's favorites players returned
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/PlayerPreview"
-        "401":
-          description: user is not authorized
-    post:
-      summary: save player in the favorites list of a user
-      tags:
-        - Users
-        - Players
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                playerId:
-                  type: string
-                  description: player's id which the user saved
-                  example: 85
-      responses:
-        "201":
-          description: The player successfully saved as favorite
-        "401":
-          description: user is not authorized
-  /teams/teamFullDetails/{teamId}:
-    get:
-      summary: get full deatils about a team
-      description: useful for team page
-      tags:
-        - Teams
-      parameters:
-        - in: path
-          name: teamId
-          description: team's id
-          required: true
-          schema:
-            type: integer
-      responses:
-        "200":
-          description: data about the team
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Team"
+          description: "returned league details"
         "404":
-          description: teamId is not exists
+          description: "couldn't supply league's details, league not found"
+  /matches/{match_id}:
+    get:
+      tags: 
+        - matches
+      summary: get_match_by_id 
+      parameters: 
+      - in: "path"
+        name: match_id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: "returned match that matches id"
+        "404":
+          description: "invalid match id"
+  /coaches/{coach_id}:
+    get:
+      tags: 
+        - coaches
+      summary: get_coach_by_id 
+      parameters: 
+      - in: "path"
+        name: coach_id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: "returned coach that matches coach id"
+        "404":
+          description: "invalid coach id"
+  /players/{player_id}:
+    get:
+      tags: 
+        - players
+      summary: get_player_by_id 
+      parameters: 
+      - in: "path"
+        name: player_id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: "returned player that matches player id"
+        "404":
+          description: "invalid player id"
+  /users/{user_id}:   
+    get:
+      tags: 
+        - users
+      summary: get_user_by_id 
+      parameters: 
+      - in: "path"
+        name: user_id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: "returned user that matches user id"
+        "404":
+          description: "invalid user id"
+  /teams/{team_id}:   
+    get:
+      tags: 
+        - teams
+      summary: get_team_by_id 
+      parameters: 
+      - in: "path"
+        name: team_id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: "returned team that matches team id"
+        "404":
+          description: "invalid team id"
+  /players/search/{player_name}:
+    get:
+      tags: 
+        - players
+        - search
+      summary: get_player_by_name
+      description: get player by full or partial name query. 
+      parameters: 
+      - in: "path"
+        name: player_name
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: "returned players that match name query"
+        "404":
+          description: "invalid name query, could not find players"
+  /coaches/search/{coach_name}:
+    get:
+      tags: 
+        - coaches
+        - search
+      summary: get_coach_by_name
+      description: get coach by full or partial name query. 
+      parameters: 
+      - in: "path"
+        name: coach_name
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: "returned coaches that match name query"
+        "404":
+          description: "invalid name query, could not find coachs"
+  /teams/search/{team_name}:
+    get:
+      tags: 
+        - teams
+        - search
+      summary: get_team_by_name
+      description: get team by full or partial name query. 
+      parameters: 
+      - in: "path"
+        name: team_name
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: "returned teams that match name query"
+        "404":
+          description: "invalid name query, could not find teams"
+  /teams/{team_id}/matches:
+    get:
+      tags: 
+        - teams
+        - matches
+      summary: get_matches_by_team
+      description: get all matches team has played in or will play in. 
+      parameters: 
+      - in: "path"
+        name: team_id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: "returned matches that match team id"
+        "404":
+          description: "invalid team id, could not find matches"
+  /users/{user_id}/favorites/matches:
+    put:
+      tags: 
+        - users
+        - favorites
+      summary: register 
+      description: register new user to system
+      parameters:
+      - name: "user_id"
+        in: "path" #?
+        required: true
+        schema:
+          type: "integer"
+        # format: "int64"
+      - name: "match_id"
+        in: "query" #?
+        description: "match to add to favorites matches of user"
+        required: true
+        schema:
+          type: "integer"
+        # format: "int64"
+      responses:
+        '201':
+          description: "match successfully added to favorites"
+        '404':
+          description: "user or match could not be found"
+  /users/{user_id}/favorites/players:
+    put:
+      tags: 
+        - users
+        - favorites
+      summary: register 
+      description: register new user to system
+      parameters:
+      - name: "user_id"
+        in: "path" #?
+        required: true
+        schema:
+          type: "integer"
+        # format: "int64"
+      - name: "player_id"
+        in: "query" #?
+        description: "player to add to favorites players of user"
+        required: true
+        schema:
+          type: "integer"
+        # format: "int64"
+      responses:
+        '201':
+          description: "player successfully added to favorites"
+        '404':
+          description: "user or player could not be found"
+  /users/{user_id}/favorites/teams:
+    put:
+      tags: 
+        - users
+        - favorites
+      summary: register 
+      description: register new user to system
+      parameters:
+      - name: "user_id"
+        in: "path" #?
+        required: true
+        schema:
+          type: "integer"
+        # format: "int64"
+      - name: "team_id"
+        in: "query" #?
+        description: "team to add to favorites teams of user"
+        required: true
+        schema:
+          type: "integer"
+        # format: "int64"
+      responses:
+        '201':
+          description: "team successfully added to favorites"
+        '404':
+          description: "user or team could not be found"
+          
+          
+          
 components:
   schemas:
-    User:
+    new_user:
       type: object
       properties:
         username:
-          maxLength: 8
+          type: string
+          pattern: '/^[a-zA-Z]+$/' #letters only?
           minLength: 3
-          type: string
-          description: username conatins between 3 to 8 letters only
-          example: ladygaga
-        firstname:
-          type: string
-          description: user's first name
-          example: Stefani
-        lastname:
-          type: string
-          description: user's last name
-          example: Germanotta
-        country:
-          type: string
-          description: user's country
-          example: USA
+          maxLength: 8
+          # required: true
+          example: 'tom'
         password:
-          maxLength: 10
-          minLength: 5
           type: string
-          description:
-            password conatins between 5 to 10 chars, at least one of them
-            is a number and a special char
-          format: password
-          example: lady@56
+          pattern: '/[a-zA-Z]\d/g' #has number and letter
+          minLength: 5
+          maxLength: 10
+          # required: true
+          example: 'rob1'
+        # confirmation_password: no idea how to confirm versus password
+        first_name:
+          type: string
+          example: 'Widget'
+        last_name:
+          type: string
+          example: 'Adapter'
+        country: #do we need to enforce this further?
+            type: string
+            example: 'Kings Dominion'
         email:
-          pattern: email
           type: string
-          description: user's email
-          example: ladygaga@gmail.com
-        image-url:
-          pattern: URL
+          format: email
+        profile_pic:
           type: string
-          description: URL for the user's image
-          example: https://cloudinary.com/
-      description: Model containing user info
-    LoginScheme:
+          format: URL
+          example: 'https://www.some_domain.com/my_img.jpg'
+    Login:
       type: object
+      description: user info for login
       properties:
         username:
-          type: string
-          minLength: 3
-          maxLength: 8
-          description: username conatins letters only
-          example: naorbe
+           pattern: '/^[a-zA-Z]+$/' #letters only?
+           minLength: 3
+           maxLength: 8
+           description: username must be between 3 to 8 chars and only letters
+           example: 'tom'
         password:
           type: string
+          pattern: '/[a-zA-Z]\d/g' #has number and letter
           minLength: 5
           maxLength: 10
-          format: password
-          description: password conatins at least one number and one special char
-          example: naor@55
-    League:
-      type: object
-      properties:
-        league_name:
-          type: string
-          description: league name
-          example: Superliga
-        current_season_name:
-          type: string
-          description: current season name
-          example: "2020/2021"
-        current_stage_name:
-          type: string
-          description: current stage name
-          example: Championship Round
-    PlayerPreview:
-      type: object
-      properties:
-        name:
-          type: string
-          description: player's name
-          example: Sten Michael Grytebust
-        image:
-          type: string
-          description: player's image
-          format: URL
-          example: https://cdn.sportmonks.com/images/soccer/players/11/84587.png
-        position:
-          type: integer
-          description: player's position in team
-          example: 1
-        team_name:
-          type: string
-          description: player's team name
-          example: København
-    Team:
-      type: object
-      properties:
-        name:
-          type: string
-          description: team name
-          example: København
-        players:
-          type: array
-          items:
-            type: object
-            $ref: "#/components/schemas/PlayerPreview"
+          description: password between 5 to 10 chars, must consist of 1 digit and 1 special char
+          example: 'rob1'
